# CipherShield

ciphershield/: README.md  package-lock.json  package.json  vite.config.js
ciphershield/cipherengine/: cert.pem  cipher-server.spec  decrypt_out.py  engine.py  key.pem  requirements.txt  server.py  test.enc  test.out  test.processed
ciphershield/outlook-plugin/Ciphershield-Addin/: manifest.xml  package-lock.json  package.json  webpack.config.js
ciphershield/outlook-plugin/Ciphershield-Addin/src/commands/: commands.html  commands.js
ciphershield/outlook-plugin/Ciphershield-Addin/src/dialog/: dialog.html  dialog.js
ciphershield/src/: App.tsx  index.css
ciphershield/src-tauri/: Cargo.toml  tauri.conf.json
ciphershield/src-tauri/capabilities/: default.json
ciphershield/src-tauri/src/: auth.rs  commands.rs  db.rs  encrypt_test.rs  main.rs  models.rs  processing.rs
ciphershield/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
ciphershield/src/components/screens/: DashboardScreen.tsx  LoginScreen.tsx  LogsScreen.tsx  ProcessingScreen.tsx  SettingsScreen.tsx
ciphershield/src/styles/: globals.css
