[package]
name = "ciphershield"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ciphershield_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"  # Add this for the shell plugin (sidecar support)
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.31"
ring = "0.17"
rand = "0.8"
tokio = "1.47.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
chrono = "0.4"
hex = "0.4"
arrayref = "0.3"
tauri-plugin-dialog = "2.0.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.3", features = ["v4"] }
regex = "1.9"
tracing = "0.1"
tracing-subscriber = "0.3"

